--- a/OneDo/View/Controls/ModalContainer.xaml
+++ b/OneDo/View/Controls/ModalContainer.xaml
@@ -17,12 +17,21 @@
                        DataContext="{Binding ModalService, Source={StaticResource Locator}}"
                        mc:Ignorable="d">
 
+    <Control.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark">
+                    <SolidColorBrush x:Key="BackgroundControlBrush" Color="{ThemeResource SystemBaseLowColor}" />
+                </ResourceDictionary>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="BackgroundControlBrush" Color="{ThemeResource SystemBaseLowColor}" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </Control.Resources>
+
     <Grid>
-        <Border x:Name="BackgroundControl">
-            <Border.Background>
-                <SolidColorBrush Color="{ThemeResource SystemChromeBlackMediumLowColor}" />
-            </Border.Background>
-        </Border>
+        <Border x:Name="BackgroundControl" Background="{ThemeResource BackgroundControlBrush}" />
         <ItemsControl HorizontalContentAlignment="Stretch"
                       VerticalContentAlignment="Stretch"
                       ItemsSource="{x:Bind VM.Items, Mode=OneWay}">
