--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="using:OneDo.View.Converters"
-             xmlns:vm="using:OneDo.ViewModel"
-             RequestedTheme="Light">
+             xmlns:vm="using:OneDo.ViewModel">
 
     <Application.Resources>
         <ResourceDictionary>
