--- a/OneDo/View/Modals/DebugView.xaml
+++ b/OneDo/View/Modals/DebugView.xaml
@@ -4,12 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:v="using:OneDo.View"
-             DataContext="{Binding Debug, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel Margin="24,12">
-            <TextBlock Style="{ThemeResource HeaderTextBlockStyle}" Text="Debug" />
-        </StackPanel>
-    </Grid>
+    <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBox x:Name="Log"
+                 Grid.Row="1"
+                 Padding="12"
+                 BorderThickness="0"
+                 FontFamily="Consolas"
+                 FontSize="12"
+                 AcceptsReturn="True"
+                 IsReadOnly="True"
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 Text="{x:Bind VM.Log, Mode=OneWay}"
+                 TextChanged="Log_TextChanged" />
+    </Border>
 </v:ModalBase>
