--- a/OneDo/View/Modals/DebugView.xaml
+++ b/OneDo/View/Modals/DebugView.xaml
@@ -6,18 +6,38 @@
              xmlns:v="using:OneDo.View"
              mc:Ignorable="d">
 
-    <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBox x:Name="Log"
-                 Grid.Row="1"
-                 Padding="12"
-                 BorderThickness="0"
-                 FontFamily="Consolas"
-                 FontSize="12"
-                 AcceptsReturn="True"
-                 IsReadOnly="True"
-                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 Text="{x:Bind VM.Log, Mode=OneWay}"
-                 TextChanged="Log_TextChanged" />
-    </Border>
+    <Pivot Title="Debug"
+           Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+           SelectionChanged="Pivot_SelectionChanged">
+        <PivotItem x:Name="LogPivotItem"
+                   Margin="12,0,12,12"
+                   Header="Log">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBox x:Name="Log"
+                         Grid.Row="0"
+                         Padding="4"
+                         BorderThickness="0"
+                         FontFamily="Consolas"
+                         FontSize="12"
+                         AcceptsReturn="True"
+                         IsEnabled="False"
+                         IsReadOnly="True"
+                         ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         Text="{x:Bind VM.Log, Mode=OneWay}"
+                         TextChanged="Log_TextChanged" />
+                <CommandBar x:Name="MainCommandBar" Grid.Row="2">
+                    <AppBarButton Command="{x:Bind VM.ClearLogCommand}" Label="Clear log">
+                        <AppBarButton.Icon>
+                            <FontIcon Glyph="&#xE107;" />
+                        </AppBarButton.Icon>
+                    </AppBarButton>
+                </CommandBar>
+            </Grid>
+        </PivotItem>
+    </Pivot>
 </v:ModalBase>
